--- a/index.html
+++ b/index.html
@@ -3,5 +3,11 @@
   <head>
     <title>Leon Tzu Chan</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&family=Russo+One&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link id="theme-style" rel="stylesheet" href="">
   </head>
 </html>
