--- a/index.html
+++ b/index.html
@@ -10,4 +10,6 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <link id="theme-style" rel="stylesheet" href="">
   </head>
+
+  <body></body>
 </html>
