--- a/index.html
+++ b/index.html
@@ -11,5 +11,14 @@
     <link id="theme-style" rel="stylesheet" href="">
   </head>
 
-  <body></body>
+  <body>
+    <header>
+      <div class="main-container">
+        <div class="Hello">
+          <h1>Leon Chan</h1>
+        </div>
+        
+      </div>
+    </header>
+  </body>
 </html>
