--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
         <div class="Hello">
           <h1>Leon Chan</h1>
         </div>
-        
+
+        <div class="intro">
+          <nav class="nav">
+            <ul class="navlist"></ul>
+          </nav>
+        </div>
       </div>
     </header>
   </body>
