--- a/index.html
+++ b/index.html
@@ -21,7 +21,29 @@
         <div class="intro">
           <nav class="nav">
             <ul class="navlist"></ul>
-          </nav>
+            <li>
+              <a target="_blank" href=""
+                >Projects</a
+              >
+            </li>
+            <li>
+              <a
+                target="_blank"
+                href=""
+                >LinkedIn</a
+              >
+            </li>
+            <li>
+              <a target="_blank" href="">Resume</a>
+            </li>
+            <li>
+              <a target="_blank" href=""
+                >Contact</a
+              >
+            </li>
+          </ul>
+        </nav>
+
         </div>
       </div>
     </header>
