--- a/index.html
+++ b/index.html
@@ -43,6 +43,19 @@
             </li>
           </ul>
         </nav>
+        
+        <div class="left-column">
+          <img
+            class="profile-pic"
+            src=""
+            alt="profile of myself"
+          />
+          <h5 style="text-align: center; line-height: 0">Dark/Light theme</h5>
+          <div id="theme-options-wrapper">
+            <div data-mode="dark" id="dark-mode" class="theme-dot" alt="Dark theme"></div>
+            <div data-mode="light" id="light-mode" class="theme-dot" alt="Light theme"></div>
+          </div>
+        </div>
 
         </div>
       </div>
