--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               <a target="_blank" href="">Resume</a>
             </li>
             <li>
-              <a target="_blank" href=""
+              <a target="_blank" href="email:tzuchiangchan@gmail.com"
                 >Contact</a
               >
             </li>
