--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <li>
               <a
                 target="_blank"
-                href=""
+                href="https://www.linkedin.com/in/leon-tzu-chiang-chan/"
                 >LinkedIn</a
               >
             </li>
