--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <nav class="nav">
             <ul class="navlist"></ul>
             <li>
-              <a target="_blank" href=""
+              <a target="_blank" href="https://github.com/TzuCChan"
                 >Projects</a
               >
             </li>
