--- a/index.html
+++ b/index.html
@@ -21,42 +21,56 @@
         <div class="intro">
           <nav class="nav">
             <ul class="navlist"></ul>
-            <li>
-              <a target="_blank" href="https://github.com/TzuCChan"
-                >Projects</a
-              >
-            </li>
-            <li>
-              <a
-                target="_blank"
-                href="https://www.linkedin.com/in/leon-tzu-chiang-chan/"
-                >LinkedIn</a
-              >
-            </li>
-            <li>
-              <a target="_blank" href="">Resume</a>
-            </li>
-            <li>
-              <a target="_blank" href="email:tzuchiangchan@gmail.com"
-                >Contact</a
-              >
-            </li>
-          </ul>
-        </nav>
+              <li>
+                <a target="_blank" href="https://github.com/TzuCChan"
+                  >Projects</a
+                >
+              </li>
+              <li>
+                <a
+                  target="_blank"
+                  href="https://www.linkedin.com/in/leon-tzu-chiang-chan/"
+                  >LinkedIn</a
+                >
+              </li>
+              <li>
+                <a target="_blank" href="">Resume</a>
+              </li>
+              <li>
+                <a target="_blank" href="email:tzuchiangchan@gmail.com"
+                  >Contact</a
+                >
+              </li>
+            </ul>
+          </nav>
         
-        <div class="left-column">
-          <img
-            class="profile-pic"
-            src=""
-            alt="profile of myself"
-          />
-          <h5 style="text-align: center; line-height: 0">Dark/Light theme</h5>
-          <div id="theme-options-wrapper">
-            <div data-mode="dark" id="dark-mode" class="theme-dot" alt="Dark theme"></div>
-            <div data-mode="light" id="light-mode" class="theme-dot" alt="Light theme"></div>
+          <div class="left-side">
+            <img
+              class="profile-pic"
+              src=""
+              alt="profile of myself"
+            />
+            <h5 style="text-align: center; line-height: 0">Dark/Light theme</h5>
+            <div id="theme-options-wrapper">
+              <div data-mode="dark" id="dark-mode" class="theme-dot" alt="Dark theme"></div>
+              <div data-mode="light" id="light-mode" class="theme-dot" alt="Light theme"></div>
+            </div>
           </div>
-        </div>
 
+          <div class="right-side">
+            <div id="preview-shadow" class="About">
+              <div id="preview">
+                <div id="corner-tl" class="corner"></div>
+                <div id="corner-tr" class="corner"></div>
+                <h4>About Me</h4>
+                <p>
+                  I am a huge fan of Resident Evil.
+                </p>
+                <div id="corner-bl" class="corner"></div>
+                <div id="corner-br" class="corner"></div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </header>
