--- a/index.html
+++ b/index.html
@@ -74,5 +74,36 @@
         </div>
       </div>
     </header>
+
+    <section class="tech">
+      <div class="main-container">
+        <h2>Known Technologies</h2>
+        <p>
+          I primarily focusing on developing these skills at the moment. <span style="font-weight:bold; color:blue">Frontend</span>
+        </p>
+
+        <div class="skills and languages">
+          <ul>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
+            <li>MongoDB</li>
+            <li>Express</li>
+          </ul>
+          <ul>
+            <li>Python</li>
+            <li>Django</li>
+            <li>SQL</li>
+            <li>Postgres</li>
+            <li>React</li>
+          </ul>
+        </div>
+<br />
+        <hr />
+
+<h2>Projects</h2>
+<br />
+<div class="project-wrapper">
+  
   </body>
 </html>
