--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
             />
             <h5 style="text-align: center; line-height: 0">Dark/Light theme</h5>
             <div id="theme-options-wrapper">
-              <div data-mode="dark" id="dark-mode" class="theme-dot" alt="Dark theme"></div>
-              <div data-mode="light" id="light-mode" class="theme-dot" alt="Light theme"></div>
+              <div data-mode="dark" id="dark-mode" class="theme-mode" alt="Dark theme"></div>
+              <div data-mode="light" id="light-mode" class="theme-mode" alt="Light theme"></div>
             </div>
           </div>
 
