--- a/index.html
+++ b/index.html
@@ -104,6 +104,19 @@
 <h2>Projects</h2>
 <br />
 <div class="project-wrapper">
+
+<section>
+<div class="project">
+  <img class="thumbnail" src="/images/Pop Culture Trivia.png" alt="Trivia homepage" />
+<div class="project-preview">
+  <h6 class="project-title">Pop Culture Trivia</h6>
+  <br />
+  <p class="project-description">A UI pattern project built using HTML, CSS and JavaScript.</p>
+  <br />
+  <a target="_blank" href="https://github.com/TzuCChan/Pop-Culture-Trivia">Repository Link</a>
+</div> 
+</div>
+</section>
   
   </body>
 </html>
