--- a/index.html
+++ b/index.html
@@ -117,6 +117,20 @@
 </div> 
 </div>
 </section>
+
+<section>
+  <div class="project">
+    <img class="thumbnail" src="/images/art of duck.jpg" alt="UI webpage using React.js and API" />
+    <div class="project-preview">
+      <h6 class="project-title">Art of Ducks</h6>
+      <br />
+      <p class="project-description">A UI interface front-end project built with API, React.js and CSS.</p>
+      <br />
+      <br />
+    <a target="_blank" href="https://github.com/TzuCChan/Duck-react-API-UI-pattern">Link to repository</a>
+  </div>
+  </div>
+  </section>
   
   </body>
 </html>
