--- a/index.html
+++ b/index.html
@@ -127,10 +127,23 @@
       <p class="project-description">A UI interface front-end project built with API, React.js and CSS.</p>
       <br />
       <br />
-    <a target="_blank" href="https://github.com/TzuCChan/Duck-react-API-UI-pattern">Link to repository</a>
+    <a target="_blank" href="https://github.com/TzuCChan/Duck-react-API-UI-pattern">Repository Link</a>
   </div>
   </div>
   </section>
+
+  <section>
+    <div class="project">
+      <img class="thumbnail" src="/images/Three Arts.png" alt="Main homepage" />
+    <div class="project-preview">
+      <h6 class="project-title">Three Arts</h6>
+      <br />
+      <p class="project-description">A front-end project built using React.js, CSS and JavaScript.</p>
+      <br />
+      <a target="_blank" href="https://github.com/TzuCChan/renaissance-react">Repository Link</a>
+    </div> 
+    </div>
+    </section>
   
   </body>
 </html>
