add my biography

--- a/index.html
+++ b/index.html
@@ -144,6 +144,15 @@
     </div> 
     </div>
     </section>
+
+<section class="biography">
+  <div class="main-container">
+<h2>About me</h2>
+<p>
+  When not coding, I enjoy spending time with my family.
+</p>
+  </div>
+</section>
   
   </body>
 </html>
