--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
   <div class="main-container">
 <h2>About me</h2>
 <p>
-  Before I learned how to code, I attend Baruch College and BMCC.
+  <!-- Before I learned how to code, I attend Baruch College and BMCC. -->
 </p>
   </div>
 </section>
