--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <header>
       <div class="main-container">
-        <div class="Hello">
+        <div class="hello">
           <h1>Leon Chan</h1>
         </div>
 
