about and biography css

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     </div>
     </section>
 
-<section class="biography">
+<section class="Biography">
   <div class="main-container">
 <h2>About me</h2>
 <p>
