--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <div class="left-side">
             <img
               class="profile-pic"
-              src=""
+              src="/images/1913613_1039265542803926_8349670237323387605_n.jpg"
               alt="profile of myself"
             />
             <h5 style="text-align: center; line-height: 0">Dark/Light theme</h5>
