--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <div class="intro">
           <nav class="nav">
-            <ul class="navlist"></ul>
+            <ul class="navlist">
               <li>
                 <a target="_blank" href="https://github.com/TzuCChan"
                   >Projects</a
