--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <div id="corner-tr" class="corner"></div>
                 <h4>About Me</h4>
                 <p>
-                  I am a huge fan of Resident Evil.
+                  I am a huge fan of Resident Evil. Before I learned how to code, I attend Baruch College and BMCC. My major is Business and Communication.
                 </p>
                 <div id="corner-bl" class="corner"></div>
                 <div id="corner-br" class="corner"></div>
@@ -77,9 +77,9 @@
 
     <section class="tech">
       <div class="main-container">
-        <h2>Known Technologies</h2>
+        <h2>Languages and Technologies</h2>
         <p>
-          I primarily focusing on developing these skills at the moment. <span style="font-weight:bold; color:blue">Frontend</span>
+          <span style="font-weight:bold; color:blue">I primarily focusing on developing these skills at the moment. Frontend</span>
         </p>
 
         <div class="skillsandlanguages">
@@ -147,9 +147,10 @@
 
 <section class="Biography">
   <div class="main-container">
-<h2>About me</h2>
+<h2>Contact</h2>
 <p>
-  Before I learned how to code, I attend Baruch College and BMCC. My major is Business and Communication.
+  6466512532
+  tzuchiangchan@gmail.com
 </p>
   </div>
 </section>
