--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
 <section class="Biography">
   <div class="main-container">
-<h2>Contact</h2>
+<h2>Contact Info</h2>
 <p>
   6466512532
   tzuchiangchan@gmail.com
