--- a/index.html
+++ b/index.html
@@ -154,6 +154,20 @@
 </p>
   </div>
 </section>
+
+<section class="Experiences">
+  <div class="container">
+<h2>Resume</h2>
+<ul>
+  <li>MUJI</li>
+  <li>What I'm playing 🎮: Wordle, Quordle, Words with Friends (<a target="_blank" href="https://words2.page.link/M4PH">PLAY ME</a>)</li>
+  <li>What I'm watching 📺: Young Justice, YT videos on coding, UFC</li>
+  <li>What I'm reading 📖: Atomic Habits</li>
+  <li>What I'm learning 💻: Python, Django, personal finance</li>
+  <li>What I'm snacking on 🍿: Platano chips, Trail mix, gummy bears</li>
+</ul>
+  </div>
+</section>
   
   </body>
 </html>
