--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 <ul>
   <li>MUJI</li>
   <li>City University of New York</li>
-  <li>What I'm watching 📺: Young Justice, YT videos on coding, UFC</li>
+  <li>SPAtlight Marketing</li>
   <li>What I'm reading 📖: Atomic Habits</li>
   <li>What I'm learning 💻: Python, Django, personal finance</li>
   <li>What I'm snacking on 🍿: Platano chips, Trail mix, gummy bears</li>
