--- a/index.html
+++ b/index.html
@@ -159,10 +159,10 @@
   <div class="container">
 <h2>Resume</h2>
 <ul>
-  <li>MUJI</li>
+  <li>Research Foundation of CUNY</li>
   <li>City University of New York</li>
   <li>SPAtlight Marketing</li>
-  <li>What I'm reading 📖: Atomic Habits</li>
+  <li>MUJI</li>
   <li>What I'm learning 💻: Python, Django, personal finance</li>
   <li>What I'm snacking on 🍿: Platano chips, Trail mix, gummy bears</li>
 </ul>
