--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
   <li>City University of New York</li>
   <li>SPAtlight Marketing</li>
   <li>MUJI</li>
-  <li>What I'm learning 💻: Python, Django, personal finance</li>
+  <li>MOMO Dressing</li>
   <li>What I'm snacking on 🍿: Platano chips, Trail mix, gummy bears</li>
 </ul>
   </div>
