--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
   <li>SPAtlight Marketing</li>
   <li>MUJI</li>
   <li>MOMO Dressing</li>
-  <li>What I'm snacking on 🍿: Platano chips, Trail mix, gummy bears</li>
+  <li>Hester Street</li>
 </ul>
   </div>
 </section>
