--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
   </div>
 </section>
 
-<section class="Experiences">
+<section class="Experience">
   <div class="container">
 <h2>Resume</h2>
 <ul>
