--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 >
               </li>
               <li>
-                <a target="_blank" href="">Resume</a>
+                <a target="_blank" href="Leon SEI Resume Edit 2.pdf">Resume</a>
               </li>
               <li>
                 <a target="_blank" href="email:tzuchiangchan@gmail.com"
