--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 </section>
 
 <section class="Experience">
-  <div class="container">
+  <div class="main-container">
 <h2>Resume</h2>
 <ul>
   <li>Research Foundation of CUNY</li>
