change resume and contact info

--- a/index.html
+++ b/index.html
@@ -145,29 +145,34 @@
     </div>
     </section>
 
-<section class="Biography">
-  <div class="main-container">
-<h2>Contact Info</h2>
-<p>
-  6466512532
-  tzuchiangchan@gmail.com
-</p>
+  </div>
+</section>
+    </div>
+
+    <section class="Biography">
+      <div class="main-container">
+    <h2>Resume</h2>
+    <p>
+      Work Experience
+    </p>
+    <ul>
+      <li>RFCUNY</li>
+      <li>CUNY</li>
+      <li>SPAtlight Marketing</li>
+      <li>MUJI</li>
+      <li>MOMO Dressing</li>
+      <li>Hester Street</li>
+    </ul>
+
   </div>
 </section>
 
-<section class="Experience">
-  <div class="main-container">
-<h2>Resume</h2>
-<ul>
-  <li>Research Foundation of CUNY</li>
-  <li>City University of New York</li>
-  <li>SPAtlight Marketing</li>
-  <li>MUJI</li>
-  <li>MOMO Dressing</li>
-  <li>Hester Street</li>
-</ul>
-  </div>
-</section>
-  
+<div class="main-container">
+  <h2>Contact Info</h2>
+</div>
+<li>tzuchiangchan@gmail.com</li>
+<li>646 651 2532</li>
+<script type="text/javascript" src="script.js"></script>
+
   </body>
 </html>
