--- a/index.html
+++ b/index.html
@@ -157,11 +157,17 @@
     </p>
     <ul>
       <li>RFCUNY</li>
+        <ul>2016 - Present</ul>
       <li>CUNY</li>
+      <ul>2021 - 2022</ul>
       <li>SPAtlight Marketing</li>
+      <ul>1/2021 - 5/2022</ul>
       <li>MUJI</li>
+      <ul>2/2016 - 3/2020</ul>
       <li>MOMO Dressing</li>
+      <ul>8/2014 - 6/2015</ul>
       <li>Hester Street</li>
+      <b>1/2012 - 1/2017</b>
     </ul>
 
   </div>
