--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
     </p>
     <ul>
       <li>RFCUNY</li>
-        <ul>2016 - Present</ul>
+        <ul>10/2016 - Present</ul>
       <li>CUNY</li>
         <ul>2021 - 2022</ul>
       <li>SPAtlight Marketing</li>
