add skills and language

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <div class="main-container">
         <h2>Languages and Technologies</h2>
         <p>
-          <span style="font-weight:bold; color:white">I primarily focusing on developing these skills at the moment. Frontend</span>
+          <span style="font-weight:bold; color:white">I primarily focusing on developing these skills at the moment. I am very interested in Frontend development</span>
         </p>
 
         <div class="skillsandlanguages">
