--- a/index.html
+++ b/index.html
@@ -157,15 +157,15 @@
     </p>
     <ul>
       <li>RFCUNY</li>
-        <ul>10/2016 - Present</ul>
+        <b>10/2016 - Present</b>
       <li>CUNY</li>
-        <ul>8/2021 - 2/2022</ul>
+        <b>8/2021 - 2/2022</b>
       <li>SPAtlight Marketing</li>
-        <ul>1/2021 - 5/2022</ul>
+        <b>1/2021 - 5/2022</b>
       <li>MUJI</li>
-        <ul>2/2016 - 3/2020</ul>
+        <b>2/2016 - 3/2020</b>
       <li>MOMO Dressing</li>
-        <ul>8/2014 - 6/2015</ul>
+        <b>8/2014 - 6/2015</b>
       <li>Hester Street</li>
         <b>1/2012 - 1/2017</b>
     </ul>
