--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
     <section class="Biography">
       <div class="main-container">
     <h2>Resume</h2>
+    <div class="skillsandlanguages">
     <p>
       Work Experience
     </p>
@@ -169,6 +170,15 @@
       <li>Hester Street</li>
         <b>1/2012 - 1/2017</b>
     </ul>
+    <ul>
+      <li>General Assembly</li>
+        <b>10/2016 - Present</b>
+      <li>Baruch College</li>
+        <b>8/2021 - 2/2022</b>
+      <li>Borough of Manhattan Community College</li>
+        <b>1/2021 - 5/2022</b>
+    </ul>
+    </div>
 
   </div>
 </section>
