update html and css

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     <section class="Biography">
       <div class="main-container">
     <h2>Resume</h2>
-    <div class="skillsandlanguages">
+    <div class="experienceandeducation">
     <p>
       Work Experience
     </p>
