--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <span style="font-weight:bold; color:white">I primarily focusing on developing these skills at the moment. I am very interested in Frontend development</span>
         </p>
 
-        <div class="skillsandlanguages">
+        <div class="technicalskills">
           <ul>
             <li>HTML</li>
             <li>CSS</li>
