--- a/index.html
+++ b/index.html
@@ -145,6 +145,19 @@
     </div>
     </section>
 
+    <section>
+      <div class="project">
+        <img class="thumbup" src="/images/Three Arts.png" alt="Main homepage" />
+      <div class="project-preview">
+        <h6 class="project-title">Three Arts</h6>
+        <br />
+        <p class="project-description">A front-end project built using React.js, CSS and JavaScript.</p>
+        <br />
+        <a target="_blank" href="https://github.com/TzuCChan/renaissance-react">Repository Link</a>
+      </div> 
+      </div>
+      </section>
+
   </div>
 </section>
     </div>
