--- a/index.html
+++ b/index.html
@@ -149,11 +149,11 @@
       <div class="project">
         <img class="thumbup" src="/images/Three Arts.png" alt="Main homepage" />
       <div class="project-preview">
-        <h6 class="project-title">Three Arts</h6>
+        <h6 class="project-title">Calculator React</h6>
         <br />
         <p class="project-description">A front-end project built using React.js, CSS and JavaScript.</p>
         <br />
-        <a target="_blank" href="https://github.com/TzuCChan/renaissance-react">Repository Link</a>
+        <a target="_blank" href="https://github.com/TzuCChan/calculator-react">Repository Link</a>
       </div> 
       </div>
       </section>
