--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       <div class="project-preview">
         <h6 class="project-title">Calculator React</h6>
         <br />
-        <p class="project-description">A front-end project built using React.js, CSS and JavaScript.</p>
+        <p class="project-description">A calculator frontend project built using React.js.</p>
         <br />
         <a target="_blank" href="https://github.com/TzuCChan/calculator-react">Repository Link</a>
       </div> 
