--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
     <section>
       <div class="project">
-        <img class="thumbup" src="/images/Three Arts.png" alt="Main homepage" />
+        <img class="thumbup" src="/images/Calculator react.png" alt="Main homepage" />
       <div class="project-preview">
         <h6 class="project-title">Calculator React</h6>
         <br />
