--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <div class="project-preview">
       <h6 class="project-title">Art of Ducks</h6>
       <br />
-      <p class="project-description">A UI interface front-end project built with API, React.js and CSS.</p>
+      <p class="project-description">A UI interface front-end project built with API, React.js and CSS. Similar to Instagram, you can zoom in the image when you click it.</p>
       <br />
       <br />
     <a target="_blank" href="https://github.com/TzuCChan/Duck-react-API-UI-pattern">Repository Link</a>
@@ -138,7 +138,7 @@
     <div class="project-preview">
       <h6 class="project-title">Three Arts</h6>
       <br />
-      <p class="project-description">A front-end project built using React.js, CSS and JavaScript.</p>
+      <p class="project-description">A front-end project built using React.js, CSS and JavaScript. It is about famous painter and sculpter from renaissance period</p>
       <br />
       <a target="_blank" href="https://github.com/TzuCChan/renaissance-react">Repository Link</a>
     </div> 
