--- a/index.html
+++ b/index.html
@@ -212,8 +212,8 @@
 <div class="main-container">
   <h2>Contact Info</h2>
 </div>
-<li>tzuchiangchan@gmail.com</li>
-<li>646 651 2532</li>
+<ul>tzuchiangchan@gmail.com</ul>
+<ul>646 651 2532</ul>
 <script type="text/javascript" src="script.js"></script>
 
   </body>
