--- a/index.html
+++ b/index.html
@@ -212,8 +212,10 @@
 <div class="main-container">
   <h2>Contact Info</h2>
 </div>
+<div class="contact">
 <ul>tzuchiangchan@gmail.com</ul>
 <ul>646 651 2532</ul>
+</div>
 <script type="text/javascript" src="script.js"></script>
 
   </body>
