--- a/index.html
+++ b/index.html
@@ -179,9 +179,7 @@
       <div class="main-container">
     <h2>Resume</h2>
     <div class="experienceandeducation">
-    <p>
-      Work Experience
-    </p>
+    <p>Work Experience</p>
     <ul>
       <li>RFCUNY</li>
         <b>10/2016 - Present</b>
@@ -196,6 +194,7 @@
       <li>Hester Street</li>
         <b>1/2012 - 1/2017</b>
     </ul>
+    <p>Education</p>
     <ul>
       <li>General Assembly</li>
         <b>10/2016 - Present</b>
@@ -213,8 +212,8 @@
   <h2>Contact Info</h2>
 </div>
 <div class="contact">
-<ul>tzuchiangchan@gmail.com</ul>
-<ul>646 651 2532</ul>
+  <ul>tzuchiangchan@gmail.com</ul>
+  <ul>646 651 2532</ul>
 </div>
 <script type="text/javascript" src="script.js"></script>
 
