--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
       <div class="main-container">
     <h2>Resume</h2>
     <div class="experienceandeducation">
-    <p>Work Experience</p>
+    <p>Experience</p>
     <ul>
       <li>RFCUNY</li>
         <b>10/2016 - Present</b>
