--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <a target="_blank" href="Leon SEI Resume Edit 2.pdf">Resume</a>
               </li>
               <li>
-                <a target="_blank" href="mailto:tzuchiangchan@gmail.com"
+                <a href="contact.html"
                   >Contact</a
                 >
               </li>
