--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
          <link href="contact.css" rel="stylesheet">
      </head>    
 
-<body> 
+<!-- <body> 
   <nav class="navigation">
     <ul class="navigation-links">
      <li><strong>Welcome</strong></li>
@@ -24,7 +24,7 @@
     <li><a href="contact.html">Contact</a></li>
     </div>
    </ul>
-  </nav>
+  </nav> -->
 
 <div class="call">
   <h1>Contact</h1>
