--- a/contact.html
+++ b/contact.html
@@ -7,24 +7,31 @@
          <link href="contact.css" rel="stylesheet">
      </head>    
 
-<!-- <body> 
-  <nav class="navigation">
-    <ul class="navigation-links">
-     <li><strong>Welcome</strong></li>
-    <div>
-    <li><a href="index.html">Home</a></li>
-    </div>
-    <div>
-    <li><a href="about.html">About</a></li>
-    </div>
-    <div>
-    <li><a href="projects.html">Projects</a></li>
-    </div>
-    <div>
-    <li><a href="contact.html">Contact</a></li>
-    </div>
-   </ul>
-  </nav> -->
+     <div class="intro">
+      <nav class="nav">
+        <ul class="navlist">
+          <li>
+            <a target="_blank" href="https://github.com/TzuCChan"
+              >Projects</a
+            >
+          </li>
+          <li>
+            <a
+              target="_blank"
+              href="https://www.linkedin.com/in/leon-tzu-chiang-chan/"
+              >LinkedIn</a
+            >
+          </li>
+          <li>
+            <a target="_blank" href="Leon SEI Resume Edit 2.pdf">Resume</a>
+          </li>
+          <li>
+            <a href="contact.html"
+              >Contact</a
+            >
+          </li>
+        </ul>
+      </nav>
 
 <div class="call">
   <h1>Contact</h1>
