--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
           <nav class="nav">
             <ul class="navlist">
               <li>
+                <a target="_blank" href="http://127.0.0.1:5501/index.html"
+                  >Home</a
+                >
+              </li>
+              <li>
                 <a target="_blank" href="https://github.com/TzuCChan"
                   >Projects</a
                 >
