--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
     <section class="Biography">
       <div class="main-container">
     <h2>Resume</h2>
-    <div class="experienceandeducation">
+    <div class="experience">
     <p>Experience</p>
     <ul>
       <li>RFCUNY</li>
