--- a/index.html
+++ b/index.html
@@ -200,6 +200,14 @@
   </div>
 </section>
 
+<section class="Biography">
+  <div class="main-container">
+    <div class="education">
+      <p>Education</p>
+    </div>
+  </div>
+</section>
+
 <div class="main-container">
   <h2>Contact Info</h2>
 </div>
