--- a/index.html
+++ b/index.html
@@ -204,6 +204,11 @@
   <div class="main-container">
     <div class="education">
       <p>Education</p>
+      <ul>
+        <li>General Assembly</li>
+        <li>Baruch College</li>
+        <li>Borough of Manhattan Community College</li>
+      </ul>
     </div>
   </div>
 </section>
