change academic years

--- a/index.html
+++ b/index.html
@@ -206,8 +206,11 @@
       <p>Education</p>
       <ul>
         <li>General Assembly</li>
+          <b>February 2022 - May 2022</b>
         <li>Baruch College</li>
+          <b>January 2018 - June 2021</b>
         <li>Borough of Manhattan Community College</li>
+          <b>January 2012 - December 2015</b>
       </ul>
     </div>
   </div>
