add degree and major

--- a/index.html
+++ b/index.html
@@ -207,10 +207,13 @@
       <ul>
         <li>General Assembly</li>
           <b>February 2022 - May 2022</b>
+          <x>SEI Certified</x>
         <li>Baruch College</li>
           <b>January 2018 - June 2021</b>
+          <x>B.A. Buesiness Communications</x>
         <li>Borough of Manhattan Community College</li>
           <b>January 2012 - December 2015</b>
+          <x>A.A.S. Business management</x>
       </ul>
     </div>
   </div>
