--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
     <ul>
       <li>RFCUNY</li>
         <b>10/2016 - Present</b>
-        <x>tutoring students in chinese</x>
+        <ol>tutoring students in chinese</ol>
       <li>CUNY</li>
         <b>8/2021 - 2/2022</b>
       <li>SPAtlight Marketing</li>
