--- a/index.html
+++ b/index.html
@@ -228,5 +228,9 @@
 </div>
 <script type="text/javascript" src="script.js"></script>
 
+ <footer class="footer">
+  <p class="copyright">Copyright 2022 Leon, All Right Reserved</p>
+ </footer>
+
   </body>
 </html>
