reach out to me

--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 
 
 <div class="call">
-  <h1>Reach Me</h1>
+  <h1>Reach Out To Me</h1>
 </div>
   <img src="images/gmail.png">
   <p>tzuchiangchan@gmail.com</p>
