add new design contacts

--- a/contact.html
+++ b/contact.html
@@ -10,14 +10,11 @@
 
 <div class="call">
   <h1>Reach Out To Me</h1>
+<a href="https://www.linkedin.com/in/leon-tzu-chiang-chan/"> <img align="center" src="./images/linkedin.png" width="22"/> </a>
+<a href="mailto:tzuchiangchan@gmail.com"> <img align="center" src="./images/gmail.png" width="22"/> </a>
+<a href="https://github.com/TzuCChan"> <img src="./images/githubLogo.svg" /> </a>
 </div>
-  <img src="images/gmail.png">
-  <p>tzuchiangchan@gmail.com</p>
-  <img src="images/linkedin.png">
-  <p>https://www.linkedin.com/in/leon-tzu-chiang-chan/</p>
-  <img src="images/github.png">
-  <p>https://github.com/TzuCChan</p> 
-
+  
   
 </body>
 
