--- a/contact.html
+++ b/contact.html
@@ -10,8 +10,8 @@
 
 <div class="call">
   <h1>Reach Out To Me</h1>
-  <a href="https://www.linkedin.com/in/leon-tzu-chiang-chan/"> <img src="./images/linkedin.png" width="22"/> </a>
-  <a href="mailto:tzuchiangchan@gmail.com"> <img src="./images/gmailLogo.svg" width="22"/> </a>
+  <a href="https://www.linkedin.com/in/leon-tzu-chiang-chan/"> <img src="./images/linkedin.png"/> </a>
+  <a href="mailto:tzuchiangchan@gmail.com"> <img src="./images/gmailLogo.svg" /> </a>
   <a href="https://github.com/TzuCChan"> <img src="./images/githubLogo.svg" /> </a>
 </div>
   
